--- a/src/screens/login/login.css
+++ b/src/screens/login/login.css
@@ -1,10 +1,10 @@
-*{
+.login *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
 }
-body{
+.login{
     display: flex;
     justify-content: flex-end;
     align-items: center;
