--- a/src/screens/login/login.css
+++ b/src/screens/login/login.css
@@ -13,7 +13,7 @@
     background-size: cover;
     background-position: center;
 }
-.wrapper{
+.login .wrapper{
     width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2) !important;
@@ -36,7 +36,7 @@
     height: 50px;
     margin: 30px 0;
 }
-.input-box input{
+.login .input-box input{
     width: 100%;
     height: 100%;
     background: transparent;
@@ -104,6 +104,7 @@
     color: #fff;
     text-decoration: none;
     font-weight: 600;
+    cursor: pointer;
 
 }
 .register-link a:hover{
