--- a/src/screens/register/register.css
+++ b/src/screens/register/register.css
@@ -16,7 +16,7 @@
     background-size: cover;
 }
 
-.wrapper {
+.register .wrapper {
     width: 420px;
     background: transparent;
     color: #fff;
@@ -39,12 +39,12 @@
     margin: 30px 0;
 }
 
-.input-box input {
+.register .input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
-    border: none;
-    outline: none;
+    /* border: none;
+    outline: none; */
     border: 2px solid rgba(2, 255, 255, .2);
     border-radius: 40px;
     font-size: 15px;
@@ -79,7 +79,7 @@
 }
 
 .wrapper .login-link {
-    font-size: 14.5 px;
+    font-size: 14.5px;
     text-align: center;
     margin-top: 20px;
 }
@@ -88,4 +88,7 @@
     color: #fff;
     text-decoration: none;
     font-weight: 600;
+}
+.login-link a:hover{
+    text-decoration: underline;
 }
