--- a/src/components/BookCards/BookCards.css
+++ b/src/components/BookCards/BookCards.css
@@ -4,12 +4,16 @@
     height: 380px;
     width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    cursor:pointer;
+    border-radius: 9px;
 }
 
 .book-img-div img{
     height: 150px;
     width: 120px;
+    border-radius: 9px;
 }
+
 
 .book-img-div{
     padding-top: 10px;
@@ -55,3 +59,4 @@
 .price-details del{
     color: red;
 }
+
