--- a/src/components/DonatedBookCards/donatedBookCards.css
+++ b/src/components/DonatedBookCards/donatedBookCards.css
@@ -4,11 +4,13 @@
     height: 380px;
     width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius:9px ;
 }
 
 .dobated-book-img-div img{
     height: 150px;
     width: 120px;
+    border-radius: 9px;
 }
 
 .dobated-book-img-div{
