--- a/src/screens/Sell/sell.css
+++ b/src/screens/Sell/sell.css
@@ -12,7 +12,7 @@
 }
 
 
-.card{
+.sell-card{
     display: flex;
     justify-content: flex-end;
     /* align-items: center;
@@ -159,7 +159,7 @@
     .image-sell {
         display:none;
     }
-    .card{
+    .sell-card{
         display: flex;
         justify-content: center;
         align-items: center;
