--- a/src/screens/login/login.css
+++ b/src/screens/login/login.css
@@ -63,7 +63,7 @@
     border: 1px solid #c443ef;
     border-radius: 40px;
     font-size: 16px;
-    font-style: italic;
+    /* font-style: italic; */
     color: #c443ef;
     padding: 20px 45px 20px 20px;
     margin-bottom: 10px;
