--- a/src/screens/Profile/Profile.css
+++ b/src/screens/Profile/Profile.css
@@ -116,3 +116,14 @@ ul li {
   font-size: 20px;
   border-bottom: 2px solid #dee2e6;
 }
+
+.btn-danger{
+  background-color: red;
+  padding: 6px;
+  margin: 5px;
+  color: white;
+  font-weight: 600px;
+  border-radius: 7px;
+  font-size: medium;
+  border: #e6001f;
+}
