--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -1,15 +1,16 @@
 .search-bar{
     width: 40%;
     padding: 10px;
-    padding-left: 40px;
+    padding-left: 20px;
     border-radius: 20px;
     border: gray 2px solid;
 }
 
 .search-div svg{
     position: relative;
-    left: 30px;
+    right: 30px;
     top: 3px;
+    cursor: pointer;
 }
 
 .search-btn{
