--- a/src/screens/Sell/sell.css
+++ b/src/screens/Sell/sell.css
@@ -189,6 +189,21 @@
         width: 90%;
     }
 }
+
+.alert {
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.success {
+  color: green;
+}
+
+.error {
+  color: red;
+}
+
   
 
   
