--- a/src/screens/requestedUser/RequestedUser.css
+++ b/src/screens/requestedUser/RequestedUser.css
@@ -1,11 +1,18 @@
 .user-card{
-    margin-top: 20px;
-    margin-right: 20px;
+    margin: 20px;
+    margin-left: 10px;
     height: 300px;
     width: 300px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 9px;
     padding: 10px;
+}
+
+.user-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; /* Align cards from left to right */
+    gap: 20px; /* Add some space between the cards */
 }
 
 .user-card h3, .user-card p{
